--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
         <div class="collapse navbar-collapse scrollspy" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
                 <li><a class="scroll" href="#top">Inicio</a></li>
-                <li><a class="scroll" href="#consulta">Consulta</a></li>
                 <li><a class="scroll" href="#servicios">Servicios</a></li>
+                <li><a class="scroll" href="#ultrasonido">Ultrasonido</a></li>
                 <!-- <li><a class="scroll" href="#team">Team</a></li> -->
                 <!-- <li><a class="scroll" href="#testimonials">Testimonials</a></li> -->
                 <li><a class="scroll" href="#gallery">Gallería</a></li>
